feat(nvim): comment out tex snippets that should be \newcommand'ed instead

--- a/configs/browser/profile/chrome/userChrome.css
+++ b/configs/browser/profile/chrome/userChrome.css
@@ -36,6 +36,7 @@
 
 /* hide stuff */
 .titlebar-button,
+.urlbarView-row::before,
 button[title="Tridactyl sidebar"],
 button[title="Customize sidebar"] {
 	display: none;
